--- a/index2.html
+++ b/index2.html
@@ -24,8 +24,8 @@
 	    <h1>Slide 2</h1>
 	    <p>Lorem ipsum dolor sit amet, in velit iudico mandamus sit, persius dolorum in per, postulant mnesarchum cu nam. Malis movet ornatus id vim, feugait detracto est ea, eam eruditi conceptam in. Ne sit explicari interesset. Labores perpetua cum at. Id viris docendi denique vim.</p>
 	  </div>
-	  <img src="http://lorempixel.com/640/480/abstract/6/">
-	  <img src="http://lorempixel.com/640/480/abstract/4/"> 
+	  <img src="img/img_parallax3.jpg">
+	  <img src="img/img_parallax2.jpg"> 
 	</div>
 
 	<div id="slide3" class="slide">
@@ -36,7 +36,7 @@
 	</div>
 
 	<div id="slide4" class="slide header">
-	    <h1>The End</h1>
+	    <h1>Finalcito</h1>
 	</div>
 	
 </body>
